app/assets/stylesheets/master.css.scss
.places-index.booyah-box.col-xs-12 {
  //   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
  // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
  // box-shadow: 1px 1px 2px 0 #d0d0d0;
  // background: #fff;
  // border: 1px solid #ccc;
  // border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  // border-radius: 5px;
  margin-top:30px;
  margin-bottom:30px;
  // padding:15px;
  // border:10px;
}

.booyah-box {
  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
  box-shadow: 1px 1px 2px 0 #d0d0d0;
  background: #fff;
  border: 1px solid #ccc;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  border-radius: 5px;
 	margin-top:30px;
	margin-bottom:30px;
  padding:15px;
  border:10px;
}


.col-xs-12, .col-sm-4 {
padding-left: 0px;
padding-right: 0px;
margin-bottom: 35px;
}

.col-xs-12, .col-sm-8 {
padding-left: 0px;
padding-right: 0px;
margin-bottom: 35px;
}

.header-box {
//   // -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
//   // -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
//   // box-shadow: 1px 1px 2px 0 #d0d0d0;
//   background: #fff;
//   border: 1px solid #ccc;
//   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
//   border-radius: 5px;
  margin-top:120px;
  margin-left: 50px;
//   margin-bottom:5px;
//   padding:15px;
//   border:10px;
 }

// .booyah-box h1 {
//   font-size: 22px;
//   text-align: left;
//   margin: 0;
//   padding: 0;
// }

.header-box h1 {
  font-size: 52px;
  text-align: left;
}

h1, h2, h3, h4 {
	margin:0;
	padding:0;
}

body {
	background: #eeeeee;
	font-family: montserratultra_light, Arial, sans-serif;
}
.navbar.navbar-inverse {
	background: url('/assets/noisy_net.png');
	border-radius: 0;
	//border-bottom: 2px solid #339966;
	margin-bottom: 0;
  font-size: 18px;
}
.navbar-inverse .navbar-nav > li > a {
    color: #cecece;
}
.navbar-inverse .navbar-brand {
	color: #339966;
	font-family: 'glacial_indifferenceregular', sans-serif;
	font-size: 26px;
	font-weight: bold;
}
button.btn.btn-default.navbar-btn {
  background-color: #26734d;
  font-size: 18px;
}

button.btn.btn-primary.pull-right {
    color: #fff;
    background-color: #337ab7;
    border-color: #2e6da4;
    margin-top: 20px;
    // vertical-align: center;
}
.field_with_errors {
	color: #ff3333;
	background-color: #FFEEEE;
	border-radius: 3px;
	padding: 8px;
}
#map {
  height: 400px;
}
#map-popup-pane {
  
}

.clear {
	clear: both;
}

// h1 {
//   font-family: montserratultra_light, Arial, sans-serif;
//   font-size: 36px;
//   text-align: center;
//   //padding-top: 50px;
//   padding-bottom: 30px;
// }
blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  border-radius: 5px;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 3em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}
.photoframe {
  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
	-webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
	// box-shadow: 1px 1px 2px 0 #d0d0d0;
	background: #fff;
	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
	margin-top:0px;
	margin-bottom:0px;
	padding:0px;
}
.index-photoframe {
	position: relative;
  display: block;
  img {
  	width: 100%;
  	display: block;
    border-radius: 5px;
  }
}

.carousel {
  background-color: rgba(0,0,0,0.1);
 // margin-bottom: 50px; 
}   

.carousel-inner > .item > img, .carousel-inner > .item > a > img {    
  height: 550px;    
  width: 100%;    
}

.carousel-caption {
  font-family: montserratultra_light, Arial, sans-serif;
	font-size: 60px;
	font-weight:100;
	text-shadow: rgba(0,0,0,0.95) 2px 2px;
  width:100%;
	position:absolute;
	left:0;
}
.pagination-wrapper {
	width: 300px;
	margin: auto; 
  text-align: center;
}
.pagination {
	font-family: montserratultra_light, Arial, sans-serif;
	font-size: 14px;
}

.background-lightgray {
    background-color: #eeeeee;
}

a {
  color: #0088cc;
  text-decoration: none;
}
a:hover {
  color: #54c697;
  text-decoration: underline;
}

h2 { padding-top: 20px; }
h2:first-of-type { padding-top: 0; }
ul { padding: 0; }


div.pagination ul {
  display: inline-block;
  *display: inline;
  /* IE7 inline-block hack */

  *zoom: 1;
  text-align: center;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
}
.pagination li {
  display: inline;
}
.pagination a {
  //float: left;
  padding: 5px 14px;
  line-height: 34px;
  text-decoration: none;
  background-color: #ffffff;
  border: 1px solid #ddd;
  border-left-width: 0;
}
.pagination a:hover,
.pagination .active a {
  background-color: white;
}
.pagination .active a {
  color: #999999;
  cursor: default;
}
.pagination .disabled span,
.pagination .disabled a,
.pagination .disabled a:hover {
  color: #2a2a2a;
  cursor: default;
  border: 3px solid #FFFFFF;
}

.pagination li:first-child a {
  border-left-width: 1px;
  -webkit-border-radius: 3px 0 0 3px;
  -moz-border-radius: 3px 0 0 3px;
  border-radius: 3px 0 0 3px;
}
.pagination li:last-child a {
  -webkit-border-radius: 0 3px 3px 0;
  -moz-border-radius: 0 3px 3px 0;
  border-radius: 0 3px 3px 0;
}
.pagination-centered {
  text-align: center;
}
// .pagination-right {
//   text-align: right;
// }
.comments {
  // background-color: #339966;
  background: url('stardust.png');
  margin-top: 40px;
  margin-bottom: 10px;
}

.photos {
  background: url('stardust.png');
  margin-top: 40px;
  margin-bottom: 10px;
}
h1.comments.pull-left {
  color: white;
  margin-left: 20px;
}
h1.photos.pull-left {
  color: white;
  margin-left: 20px;
}

// div.places-index-header-container {
// background: url('/assets/noisy_net.png');
// background-color: rgba(0,0,0,0.5);
// height: 25px;
// box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
// box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
// }

h1 {
  color: #595959;
  // margin-left: 0px;
  font-family: montserratultra_light, Arial, sans-serif;
  font-size: 48px;
  //font-weight: bold;
}

h3 {
  font-size: 28px;
}

hr {
    margin-top: 0px;
    margin-bottom: 20px;
    border: 0;
    border-top: 2px solid #eeeeee;
}

img.img-responsive {
  vertical-align: center;
}
.place-photo {
  border: 10px solid #FFFFFF;
}

.carousel {
  background-color: rgba(0,0,0,0.1);
}
.header > img {
    height: 300px;
    width: 100%;
}
.map-page-text{
  margin-top: 50px;
  margin-left: 175px;
  margin-right: 175px;
  margin-bottom: 100px;
  background-color: #ffffff;
  horizontal-align: center;
  padding: 20px;
  border-radius: 5px;
  -moz-box-shadow: 1px 1px 1px 0 #d0d0d0;
  -webkit-box-shadow: 1px 1px 1px 0 #d0d0d0;
  box-shadow: 1px 1px 1px 0 #d0d0d0;
  border: 1px solid #ccc;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
}

p {
  font-size: 18px;
}
// .location-header-container {
//   margin-top: 50px;
// }

// .btn-primary {
//   margin-top: 30px;
//   // margin-bottom: 60px;

// }

.photos {
  background-color: #339966;
  vertical-align: center;
 }

 .map-box.col-xs-12 {
  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
  box-shadow: 1px 1px 2px 0 #d0d0d0;
  background: #fff;
  border: 1px solid #ccc;
  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
  // border-radius: 5px;
  margin-top:0px;
  margin-bottom:90px;
  padding:15px;
  border:10px;
}

